# SamuMovie

./: .gitignore  CMakeLists.txt  Converter.cpp  Converter.h  GameOfLife.cpp  GameOfLife.h  README.md  SamuLife.cpp  SamuLife.h  SamuLife.pro  SamuQl.h  main.cpp
